--- a/.env.build
+++ b/.env.build
@@ -1,4 +1,4 @@
-APP_NAME="Billing API"
+APP_NAME="Shorter API"
 APP_ENV=local
 APP_KEY=base64:dt7og303n7JMk/MC1+9Y5+7hFVTjwK9EO49EPqCMgLY=
 APP_DEBUG=true
