--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "Proprietary/Closed Source",
     "require": {
         "php": "^8.2",
+        "ext-redis": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.0",
-        "ext-redis": "*"
+        "pusher/pusher-php-server": "^7.2",
+        "pusher/pusher-push-notifications": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
