--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "Proprietary/Closed Source",
     "require": {
         "php": "^8.2",
+        "ext-bcmath": "*",
         "ext-redis": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
@@ -14,7 +15,7 @@
         "league/csv": "^9.0",
         "pusher/pusher-php-server": "^7.2",
         "pusher/pusher-push-notifications": "*",
-        "ext-bcmath": "*"
+        "sentry/sentry-laravel": "^4.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
